--- a/app/src/main/res/layout/activity_gallery.xml
+++ b/app/src/main/res/layout/activity_gallery.xml
@@ -12,4 +12,16 @@
         android:layout_height="match_parent"
         app:layoutManager="android.support.v7.widget.GridLayoutManager" />
 
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/fab_camera"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|right"
+        android:layout_margin="@dimen/fab_margin"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:backgroundTint="@android:color/holo_orange_light"
+        app:fabSize="normal"
+        android:src="@drawable/ic_add_a_photo_black_24dp" />
+
 </android.support.constraint.ConstraintLayout>
