--- a/app/src/main/res/layout/activity_gallery.xml
+++ b/app/src/main/res/layout/activity_gallery.xml
@@ -21,8 +21,20 @@
         android:layout_margin="@dimen/fab_margin"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:backgroundTint="@android:color/holo_orange_light"
+        app:backgroundTint="@color/colorAccent"
         app:fabSize="normal"
-        android:src="@drawable/ic_add_a_photo_black_24dp" />
+        android:src="@drawable/ic_add_a_photo_white_24dp" />
+
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/fab_map"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|left"
+        android:layout_margin="@dimen/fab_margin"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:backgroundTint="@color/colorAccent"
+        app:fabSize="normal"
+        android:src="@drawable/ic_map_white_24dp" />
 
 </android.support.constraint.ConstraintLayout>
