--- a/app/src/main/res/layout/activity_details.xml
+++ b/app/src/main/res/layout/activity_details.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/tools"
     xmlns:cardview="http://schemas.android.com/apk/res-auto">
 
     <data>
@@ -35,7 +36,8 @@
                     android:layout_alignParentTop="true"
                     android:adjustViewBounds="true"
                     android:contentDescription="@string/selected_image"
-                    android:scaleType="fitCenter" />
+                    android:scaleType="fitCenter"
+                    app:imageAsync="@{image.path}" />
 
                 <TextView
                     android:id="@+id/title"
