--- a/app/src/main/res/layout/gallery_item.xml
+++ b/app/src/main/res/layout/gallery_item.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/tools"
     xmlns:cardview="http://schemas.android.com/apk/res-auto">
 
     <data>
@@ -31,7 +32,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="180dp"
                 android:layout_alignParentTop="true"
-                android:scaleType="centerCrop" />
+                android:scaleType="centerCrop"
+                app:imageAsync="@{image.path}" />
 
             <TextView
                 android:id="@+id/title"
