--- a/app/src/main/res/layout/activity_details.xml
+++ b/app/src/main/res/layout/activity_details.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/tools"
-    xmlns:cardview="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
 
@@ -21,9 +20,9 @@
         <android.support.v7.widget.CardView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            cardview:cardCornerRadius="2dp"
-            cardview:cardElevation="3dp"
-            cardview:cardUseCompatPadding="true">
+            app:cardCornerRadius="2dp"
+            app:cardElevation="3dp"
+            app:cardUseCompatPadding="true">
 
             <android.support.constraint.ConstraintLayout
                 android:layout_width="match_parent"
@@ -52,9 +51,9 @@
                     android:textColor="#444"
                     android:textSize="18sp"
                     android:textStyle="bold"
-                    cardview:layout_constraintEnd_toEndOf="parent"
-                    cardview:layout_constraintStart_toStartOf="parent"
-                    cardview:layout_constraintTop_toBottomOf="@+id/thumbnail" />
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/thumbnail" />
 
                 <TextView
                     android:id="@+id/coordinates"
@@ -69,10 +68,10 @@
                     android:textColor="#444"
                     android:textSize="18sp"
                     android:textStyle="bold"
-                    cardview:layout_constraintEnd_toEndOf="parent"
-                    cardview:layout_constraintHorizontal_bias="0.0"
-                    cardview:layout_constraintStart_toStartOf="parent"
-                    cardview:layout_constraintTop_toBottomOf="@+id/title" />
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintHorizontal_bias="0.0"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/title" />
             </android.support.constraint.ConstraintLayout>
 
         </android.support.v7.widget.CardView>
