--- a/app/src/main/res/layout/gallery_item.xml
+++ b/app/src/main/res/layout/gallery_item.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/tools"
-    xmlns:cardview="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
 
@@ -19,9 +18,9 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="5dp"
         android:onClick="@{() -> selectedListener.run()}"
-        cardview:cardCornerRadius="2dp"
-        cardview:cardElevation="3dp"
-        cardview:cardUseCompatPadding="true">
+        app:cardCornerRadius="2dp"
+        app:cardElevation="3dp"
+        app:cardUseCompatPadding="true">
 
         <RelativeLayout
             android:layout_width="match_parent"
