--- a/app/src/main/res/layout/activity_gallery.xml
+++ b/app/src/main/res/layout/activity_gallery.xml
@@ -12,6 +12,9 @@
         <variable
             name="viewModel"
             type="uk.ac.shef.com4510.gallery.GalleryViewModel" />
+        <variable
+            name="actions"
+            type="uk.ac.shef.com4510.gallery.GalleryActions"/>
     </data>
 
     <android.support.constraint.ConstraintLayout
@@ -38,7 +41,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="bottom|end"
             android:layout_margin="@dimen/fab_margin"
-            android:onClick="@{(btn) -> viewModel.openCamera()}"
+            android:onClick="@{(btn) -> actions.openCamera()}"
             android:src="@drawable/ic_add_a_photo_white_24dp"
             app:backgroundTint="@color/colorAccent"
             app:fabSize="normal"
@@ -49,14 +52,31 @@
             android:id="@+id/fab_map"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="bottom|start"
+            android:layout_gravity="bottom|end"
             android:layout_margin="@dimen/fab_margin"
-            android:onClick="@{(btn) -> viewModel.openMap()}"
+            android:layout_marginEnd="8dp"
+            android:layout_marginBottom="8dp"
+            android:onClick="@{(btn) -> actions.openMap()}"
             android:src="@drawable/ic_map_white_24dp"
             app:backgroundTint="@color/colorAccent"
             app:fabSize="normal"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintLeft_toLeftOf="parent" />
+            app:layout_constraintBottom_toTopOf="@+id/fab_camera"
+            app:layout_constraintEnd_toEndOf="parent" />
+
+        <android.support.design.widget.FloatingActionButton
+            android:id="@+id/fab_search"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom|end"
+            android:layout_margin="@dimen/fab_margin"
+            android:layout_marginEnd="136dp"
+            android:layout_marginBottom="8dp"
+            android:onClick="@{(btn) -> actions.openSearch()}"
+            android:src="@android:drawable/ic_menu_search"
+            app:backgroundTint="@color/colorAccent"
+            app:fabSize="normal"
+            app:layout_constraintBottom_toTopOf="@+id/fab_map"
+            app:layout_constraintEnd_toEndOf="parent" />
 
     </android.support.constraint.ConstraintLayout>
 </layout>
