--- a/app/src/main/res/layout/gallery_item.xml
+++ b/app/src/main/res/layout/gallery_item.xml
@@ -4,20 +4,22 @@
 
     <data>
 
+        <import type="android.view.View" />
+
         <variable
             name="image"
             type="uk.ac.shef.com4510.data.Image" />
 
         <variable
             name="selectedListener"
-            type="java.lang.Runnable" />
+            type="android.view.View.OnClickListener" />
     </data>
 
     <android.support.v7.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="5dp"
-        android:onClick="@{() -> selectedListener.run()}"
+        android:onClick="@{selectedListener}"
         app:cardCornerRadius="2dp"
         app:cardElevation="3dp"
         app:cardUseCompatPadding="true">
