--- a/app/src/main/res/menu/main_bottom_nav.xml
+++ b/app/src/main/res/menu/main_bottom_nav.xml
@@ -2,11 +2,11 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
         android:id="@id/searchFragment"
-        android:icon="@android:drawable/ic_menu_search"
+        android:icon="@drawable/ic_search_black_24dp"
         android:title="Search" />
     <item
         android:id="@id/galleryFragment"
-        android:icon="@android:drawable/ic_menu_gallery"
+        android:icon="@drawable/ic_image_black_24dp"
         android:title="Gallery" />
     <item
         android:id="@id/mapFragment"
