--- a/app/src/main/res/layout/edit_details_fragment.xml
+++ b/app/src/main/res/layout/edit_details_fragment.xml
@@ -50,11 +50,11 @@
             android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
             android:layout_marginEnd="8dp"
-            android:text="Edit"
+            android:text="Save"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
-            android:onClick="@{(btn) -> actions.editDetails()}"/>
+            android:onClick="@{(btn) -> actions.commitEdit()}"/>
 
     </android.support.constraint.ConstraintLayout>
 </layout>
