Fixes thumb in fastscroller being too small. Found a way to fix the scroll-thumb being too small, but seems a bit overly hacky for my liking, basically copy and modify the library fast-scroller to force a minimum thumb size.

--- a/app/src/main/res/layout/gallery_fragment.xml
+++ b/app/src/main/res/layout/gallery_fragment.xml
@@ -25,7 +25,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:adapter="@{adapterProvider.adapter}"
-            app:fastScrollEnabled="true"
+            app:fastScrollEnabled="false"
             app:fastScrollHorizontalThumbDrawable="@drawable/scroll_thumb"
             app:fastScrollHorizontalTrackDrawable="@drawable/scroll_track"
             app:fastScrollVerticalThumbDrawable="@drawable/scroll_thumb"
