--- a/app/src/main/res/layout/activity_details.xml
+++ b/app/src/main/res/layout/activity_details.xml
@@ -175,14 +175,19 @@
                     app:layout_constraintTop_toBottomOf="@id/iso" />
             </android.support.constraint.ConstraintLayout>
         </ScrollView>
-        <android.support.design.widget.FloatingActionButton
+
+        <Button
+            android:id="@+id/fab_search"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="8dp"
-            android:onClick="@{(btn) -> actions.edit()}"
-            android:src="@drawable/ic_edit_white_24dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="8dp"
+            android:text="Edit"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent" />
+            android:onClick="@{(btn) -> actions.edit()}"/>
 
     </android.support.constraint.ConstraintLayout>
 </layout>
