--- a/app/src/main/res/layout/gallery_fragment.xml
+++ b/app/src/main/res/layout/gallery_fragment.xml
@@ -46,5 +46,13 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintRight_toRightOf="parent" />
 
+        <include
+            android:id="@+id/loading_more"
+            bind:count="@{viewModel.scannedImageCount}"
+            bind:scanning="@{viewModel.scanningImages}"
+            bind:total="@{viewModel.totalImagesToScan}"
+            bind:stage="@{viewModel.scanStage}"
+            layout="@layout/loading_more_fragment" />
+
     </android.support.constraint.ConstraintLayout>
 </layout>
